<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <Switch
        android:text="@string/auto_update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/switchAutoUpdater"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/auto_update_desc"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:text="@string/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:id="@+id/textViewStatus"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_below="@+id/imageViewStatus"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_refresh"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageViewRefresh"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:textStyle="normal|bold|italic"
        android:textSize="30sp"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/ic_disconnected"
        android:id="@+id/imageViewStatus"
        android:adjustViewBounds="true"
        android:layout_marginTop="86dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/app_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewStatus"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewDesc"
        android:gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />
</RelativeLayout>